--- a/app/sass/_footer.sass
+++ b/app/sass/_footer.sass
@@ -86,15 +86,15 @@ footer
 
 .foot_info-mail
 .foot_info-socbtn
-	a
+	span
 		width: 40px
 		height: 40px
 		display: inline-block
 		transition: .25s ease
-		img
-			width: 100%
-			height: auto	
-	a:hover img
+		cursor: pointer
+	
+	span:hover svg
+		transition: .25s ease
 		filter: invert(100%)
 
 #upbutton
