--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -43,8 +43,6 @@ body
 b, strong
 	font-weight: bold
 
-
-
 .head
 	display: flex
 	align-items: flex-start
@@ -84,10 +82,16 @@ b, strong
 	width: 130px
 	height: auto
 	margin: auto 30px
+	a 
+		display: block
+.logo-title
+	fill: #fff
 
 .naw-logo 
-	transition: .3s
-	&:hover svg .logo-title path
+	
+	
+
+a:hover svg .logo-title
 		fill: lighten($accent, 25%)
   
 
