--- a/app/sass/_maininfo.sass
+++ b/app/sass/_maininfo.sass
@@ -40,9 +40,12 @@
 		min-height: 150px
 
 .maininfo-img
-	width: 70px
-	height: 70px
-	margin: 30px auto
+	width: 90px
+	height: 90px
+	margin: 20px auto
+	svg
+		width: 100%
+		height: 100%
 .maininfo-btn
 	transition: background .25s ease
 	text-transform: uppercase
