--- a/app/sass/_breadcrumb.sass
+++ b/app/sass/_breadcrumb.sass
@@ -1,15 +1,16 @@
 @import "vars"
-@import "fonts"
-@import "libs"
+
 
 .title
 	font-size: 2rem
 	color: $darck
+.breadcrumb
+	margin-bottom: 25px
 .breadcrumb-list
 	list-style: none
 	padding-left: 0
 	line-height: 1.25
-	margin-bottom: 25px
+	margin-bottom: 0
 .breadcrumb-item
 	display: inline-block
 	font-size: 1rem
