--- a/app/sass/_partner.sass
+++ b/app/sass/_partner.sass
@@ -6,10 +6,10 @@
 	flex-direction: row
 	justify-content: flex-start
 	flex-wrap: wrap	
-.partner-list-content
-	width: 75%
+
 .partner-list-map-wrap
-	width: 100%
+	//order: 1
+	width: 75%
 	padding: 10px
 	height: auto
 	background-color: darken($body, 3%)
@@ -22,7 +22,7 @@
 	border: 1px solid #fff
 	border-radius: 5px
 .partner-list-wrap
-	width: 100%
+	width: 75%
 	display: flex
 	flex-direction: row
 	justify-content: flex-start
@@ -77,8 +77,7 @@
 				text-decoration: none
 
 
-.partner-manu-wrap
-	width: 25%
+
 .partner-list-btn
 	transition: background .25s ease
 	text-transform: uppercase	
@@ -100,3 +99,197 @@
 		text-decoration: none
 		color: #fff
 		background-color: $darck
+
+
+
+
+
+.partner-left-menu-wrap
+	width: calc(25% - 20px)
+	flex-shrink: 2
+	background-color: darken($body, 3%)
+	border-radius: 5px
+	padding: 10px
+	margin-bottom: 20px
+	margin-left: 20px
+	
+.partner-left-menu
+	box-sizing: border-box
+	background-color: lighten($body, 2%)
+	overflow: hidden
+	padding: 10px 15px 
+	box-shadow: 0 0 1px rgba(122,122,122,.1)
+	border-radius: 3px
+	height: 400px
+	h3 
+		padding-bottom: 5px
+		border-bottom: 1px solid #e6e6e6
+	ul 
+		padding-left: 5px
+		list-style: none
+		a 
+			color: $darck
+			transition: all .25s ease
+			i 
+				margin-right: 7px
+			&:hover
+				color: $accent
+				i 
+					margin-right: 12px
+		.active
+			color: $accent
+			text-decoration: underline
+			i 
+				margin-right: 12px
+
+.partner-left-menu-btn
+	display: none
+
+.partner-offer-wrap
+	width: calc(25% - 20px)
+	flex-shrink: 2
+	align-self: flex-start
+	background-color: darken($body, 3%)
+	border-radius: 5px
+	padding: 10px
+	margin-bottom: 20px
+	margin-left: 20px
+.partner-offer-list
+	width: 100%
+
+.partner-offer-item
+	box-sizing: border-box
+	background-color: #fff
+	border-top: 5px solid $accent
+	overflow: hidden	
+	box-shadow: 0 0 1px rgba(122,122,122,.1)
+	border-radius: 3px
+	padding: 10px 15px 20px 15px
+	margin-bottom: 20px
+
+	h3 
+		text-align: center
+		font-size: 1.05em
+	p 
+		font-size: .9em
+		line-height: 1.3
+		text-align: center
+	&:last-child
+		margin-bottom: 0
+		
+.partner-offer-img
+	width: 80px
+	height: 80px
+	margin: 15px auto
+	svg 
+		width: 100%
+		height: 100%
+.partner-offer-btn
+	transition: background .25s ease
+	text-transform: uppercase	
+	display: block
+	width: 190px
+	letter-spacing: 1px
+	white-space: normal
+	background: $accent
+	padding: 10px 20px
+	text-align: center
+	line-height: 20px
+	color: #fff
+	outline: none
+	border: none
+	font-size: 14px
+	border-radius: 3px
+	margin: 20px auto 5px auto
+	&:hover
+		text-decoration: none
+		color: #fff
+		background-color: $darck
+
+
+	// ≥1200px
++media-breakpoint-down(lg)
+	.partner-list-map-wrap
+		width: 72%
+		margin-bottom: 15px
+	.partner-left-menu-wrap
+		width: calc(28% - 15px)
+		margin-bottom: 15px
+		margin-left: 15px
+	.partner-list-wrap
+		width: 72%
+		margin-bottom: 15px
+	.partner-offer-wrap
+		width: calc(28% - 15px)
+		margin-bottom: 15px
+		margin-left: 15px
+// ≥992px
++media-breakpoint-down(md)
+	.partner-list-map-wrap
+		width: 100%
+		margin-bottom: 15px
+		order: 1
+	.partner-left-menu-wrap
+		position: relative
+		width: 0
+		margin: 0
+		padding: 0
+		order: 2
+	.partner-left-menu-btn
+		display: block
+		width: 40px
+		height: 25px
+		position: absolute
+		top: -60px
+		right: 0
+		z-index: 10
+
+		background-color: #fff
+
+	.partner-left-menu
+		display: none
+		width: 250px
+		position: absolute
+		top: 0
+		right: 0
+		z-index: 10
+		border: 1px solid darken($body, 3%)
+		border-radius: 3px
+
+	.partner-list-wrap
+		width: 100%
+		margin-bottom: 15px
+		order: 4
+	.partner-offer-wrap
+		display: block
+		width: 100%
+		height: auto
+		margin-bottom: 15px
+		margin-left: 0
+		padding: 0
+		order: 3
+
+	.partner-offer-list
+		width: 100%
+		display: flex
+		flex-direction: row
+		justify-content: flex-start
+		flex-wrap: wrap
+		align-items: stretch
+		height: auto	
+
+	.partner-offer-item
+		width: calc(50% - 20px)
+		margin: 10px
+		&:last-child
+			margin-bottom: 10px
+		
+
+		
+
+
+// ≥768px
++media-breakpoint-down(sm)
+
+// ≥576px
++media-breakpoint-down(xs)
