Правки, посадка на CMS. Гдавная

--- a/app/sass/_list.sass
+++ b/app/sass/_list.sass
@@ -12,7 +12,7 @@
 	width: calc(25% - 30px)
 	margin: 15px
 	box-sizing: border-box
-	background-color: #fff	
+	background-color: #fff
 	overflow: hidden
 	padding: 15px
 	box-shadow: 0 0 1px rgba(122,122,122,.1)
@@ -51,7 +51,7 @@
 	left: 0
 	width: 100%
 	height: 100%
-	img 
+	img
 		width: auto
 		max-width: 100%
 		height: auto
@@ -63,7 +63,7 @@
 	line-height: 20px
 	font-size: .95em
 	overflow: hidden
-	a 
+	a
 		width: 100%
 		display: block
 		color: $darck
@@ -77,7 +77,7 @@
 	width: calc(25% - 30px)
 	margin: 15px
 	box-sizing: border-box
-	background-color: #fff	
+	background-color: #fff
 	overflow: hidden
 	padding: 15px
 	box-shadow: 0 0 1px rgba(122,122,122,.1)
@@ -87,7 +87,7 @@
 	//transition: filter .25s ease
 	&:hover
 		box-shadow: 0 0 2px rgba(122,122,122,.3)
-		.list_item-title a 
+		.list_item-title a
 			color: $darck
 			text-decoration: none
 		.list_item-img-link
@@ -98,7 +98,7 @@
 	&:before
 		content: ''
 		display: block
-		padding-top: 100%		
+		padding-top: 100%
 .list_item-img-link
 	position: absolute
 	top: 0
@@ -107,7 +107,9 @@
 	left: 0
 	width: 100%
 	font-size: 0
-	background-size: cover
+	background-repeat: no-repeat
+	background-size: 80% 80%
+	background-position: 50% 50%
 
 .list_item-title
 	text-transform: uppercase
@@ -117,7 +119,7 @@
 	height: 50px
 	overflow: hidden
 	border-bottom: 1px solid #e6e6e6
-	a 
+	a
 		color: $title
 		transition: color .25s ease
 		&:hover
