--- a/app/sass/_goods.sass
+++ b/app/sass/_goods.sass
@@ -120,6 +120,10 @@
 	text-align: right
 	font-weight: 600
 	padding: 4px 9px 4px 9px
+	svg 
+		display: block
+		width: 55px
+		height: 22px
 
 .goods_discrip-call
 	display: block
