--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,8 +1,8 @@
 @import "vars"
 @import "fonts"
 @import "libs"
-@import "font-awesome-min"
-@import "jquery-fancybox-min"
+@import "font-awesome-min.css"
+@import "jquery-fancybox-min.css"
 
 ::placeholder
 	color: #666
@@ -51,7 +51,7 @@ b, strong
 	overflow: hidden
 	background-position: center
 	background-repeat: no-repeat
-	background-size: cover	
+	background-size: cover
 	text-align: center
 	border-bottom: 2px solid darken($body, 10%)
 .head-catalog
@@ -75,7 +75,7 @@ b, strong
 	width: 100%
 	height: 100px
 	color: #fff
-	
+
 	background: linear-gradient(to bottom, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0) 100%)
 .naw-logo
 	display: block
@@ -83,7 +83,7 @@ b, strong
 	height: auto
 	margin: auto 30px
 	order: 1
-	a 
+	a
 		display: block
 		background-color: rgba($darck, .2)
 #logo .logo-title
@@ -91,12 +91,12 @@ b, strong
 
 .goods_info-img-logo #logoMorso .logo-title
 		fill: #000000
-	
-	
+
+
 
 #logo :hover .logo-title
 		fill: lighten($accent, 25%)
-  
+
 
 .nav-list
 	display: flex
@@ -108,27 +108,27 @@ b, strong
 	z-index: 10
 	order: 2
 .nav-mob-phone
-	order: 3	
+	order: 3
 .naw-btn
 	display: none
 	width: 40px
 	height: 25px
-	margin: auto 20px auto 0		
+	margin: auto 20px auto 0
 	z-index: 10
 	cursor: pointer
 	order: 4
 .nav-item
 	display: flex
 	list-style: none
-	font-size: 1.25rem	
-	a 
-		display: block		
+	font-size: 1.25rem
+	a
+		display: block
 		color: #fff
 		text-shadow: 1px 1px 1px rgba(43,56,62,.5)
 		padding: 28px 15px 7px 15px
 		margin: auto 0
 		transition: .3s
-		&:hover 
+		&:hover
 			text-decoration: none
 			color: lighten($accent, 25%)
 .nav-search
@@ -140,10 +140,10 @@ b, strong
 	cursor: pointer
 	transition: .3s
 	order: 3
-	&:hover 
+	&:hover
 		color: lighten($accent, 25%)
 	i
-		margin-right: 7px	
+		margin-right: 7px
 .nav-search-phone
 	display: inline-block
 	margin-right: 30px
@@ -153,7 +153,7 @@ b, strong
 .search_wrap
 	display: none
 	position: absolute
-	top: 90px 
+	top: 90px
 	right: 80px
 	box-sizing: border-box
 	border-radius: 2px
@@ -178,7 +178,7 @@ b, strong
 		color: $accent
 		font-style: italic
 .nav-mob-phone
-	display: none	
+	display: none
 .search-btn
 	transition: background .25s ease
 	text-transform: uppercase
@@ -199,7 +199,7 @@ b, strong
 	font-size: 14px
 	cursor: pointer
 	transition: .3s
-	&:hover 
+	&:hover
 		background-color: $darck
 	// ≥1200px
 +media-breakpoint-down(lg)
@@ -210,12 +210,12 @@ b, strong
 	.nav-mob-phone
 		display: block
 		width: 100%
-		font-size: 1.5em 
+		font-size: 1.5em
 		font-weight: 600
 		text-align-last: right
 		padding-right: 30px
 		order: 4
-		i 
+		i
 			margin-right: 10px
 
 @media only screen and (max-width : 920px)
@@ -235,10 +235,10 @@ b, strong
 		position: absolute
 		top: 75px
 		right: 0
-		//width: 100%	
+		//width: 100%
 		margin: 0 20px 0 auto
 		border-radius: 5px
-	.nav-item 
+	.nav-item
 		background-color: rgba($darck, .8)
 		a
 			padding: 10px 15px
@@ -258,9 +258,9 @@ b, strong
 		text-align-last: left
 		padding-left: 30px
 		order: 3
-		i 	
+		i
 			display: none
-			
+
 @import "_nawbtn"
 @import "_breadcrumb"
 @import "_mainproducts"
@@ -269,8 +269,8 @@ b, strong
 @import "_maininfo"
 @import "_footer"
 @import "_catalog"
-@import "_list"	
-@import "_pagination"	
+@import "_list"
+@import "_pagination"
 @import "_goods"
 @import "_partner"
 @import "_article"
