--- a/app/sass/_catalog.sass
+++ b/app/sass/_catalog.sass
@@ -17,7 +17,7 @@
 .catalog-list-name
 	display: inline-block
 	margin: 0
-	a 
+	a
 		display: block
 		color: #000
 		text-transform: uppercase
@@ -28,10 +28,10 @@
 		&:hover
 			text-decoration: none
 			color: $title
-	
+
 .catalog-list-diler
 	display: inline-block
-	font-size: 0.8rem	
+	font-size: 0.8rem
 	text-transform: uppercase
 	padding: 0 0.25rem 0.1rem 0.75rem
 	//vertical-align: middle
@@ -58,24 +58,24 @@
 	transition: color .25s ease
 	corsor: pointer
 	&:hover
-		.catalog-item-img 
+		.catalog-item-img
 		.catalog-item-title a
 			color: $accent
 			text-decoration: none
 
 
 .catalog-item-img
-	display: table-cell
+	display: block
 	vertical-align: middle
 	text-align: center
 	width: 100px
 	height: 100px
 	margin: 0 auto 5px auto
-	img 
+	img
 		width: auto
 		max-width: 100px
 		height: auto
-		max-height: 100px 
+		max-height: 100px
 
 .catalog-item-title
 	color: #000
@@ -89,8 +89,6 @@
 	overflow: hidden
 	font-size: 0.8rem
 	line-height: normal
-	a 
+	a
 		color: #000
 		transition: color .25s ease
-
-	
