--- a/app/sass/_partner.sass
+++ b/app/sass/_partner.sass
@@ -5,7 +5,8 @@
 	display: flex
 	flex-direction: row
 	justify-content: flex-start
-	flex-wrap: wrap	
+	align-items: flex-start
+	flex-wrap: wrap
 
 .partner-list-map-wrap
 	//order: 1
@@ -26,10 +27,11 @@
 	display: flex
 	flex-direction: row
 	justify-content: flex-start
-	flex-wrap: wrap	
+	align-items: flex-start
+	flex-wrap: wrap
 	background-color: darken($body, 3%)
-	border-radius: 5px	
-	
+	border-radius: 5px
+
 .partner-list-item
 	font-size: .95em
 	color: #000
@@ -47,20 +49,20 @@
 	box-shadow: 0 0 1px rgba(122,122,122,.1)
 	border-top: 5px solid #ab8e58
 	padding: 25px 15px
-	transition: .25s ease	
+	transition: .25s ease
 .partner-list-txt
 	padding-bottom: 20px
 	border-bottom: 1px solid #e6e6e6
 	margin-bottom: 20px
-	p 
+	p
 		margin-bottom: 7px
 		line-height: 1.3
 		font-weight: 600
 		span
-			font-weight: normal 
+			font-weight: normal
 			font-style: italic
 			margin-left: 7px
-	h3 
+	h3
 		margin-bottom: 20px
 		text-align: center
 		transition: color .25s ease
@@ -74,7 +76,7 @@
 
 .partner-list-btn
 	transition: background .25s ease
-	text-transform: uppercase	
+	text-transform: uppercase
 	display: block
 	width: 190px
 	letter-spacing: 1px
@@ -95,9 +97,6 @@
 		background-color: $darck
 
 
-
-
-
 .partner-left-menu-wrap
 	width: calc(25% - 20px)
 	flex-shrink: 2
@@ -106,34 +105,34 @@
 	padding: 10px
 	margin-bottom: 20px
 	margin-left: 20px
-	
+
 .partner-left-menu
 	box-sizing: border-box
 	background-color: lighten($body, 2%)
 	overflow: hidden
-	padding: 10px 15px 
+	padding: 10px 15px
 	box-shadow: 0 0 1px rgba(122,122,122,.1)
 	border-radius: 3px
 	height: 400px
-	h3 
+	h3
 		padding-bottom: 5px
 		border-bottom: 1px solid #e6e6e6
-	ul 
+	ul
 		padding-left: 5px
 		list-style: none
-		a 
+		a
 			color: $darck
 			transition: all .25s ease
-			i 
+			i
 				margin-right: 7px
 			&:hover
 				color: $accent
-				i 
+				i
 					margin-right: 12px
 		.active
 			color: $accent
 			text-decoration: underline
-			i 
+			i
 				margin-right: 12px
 
 .partner-left-menu-btn
@@ -155,32 +154,32 @@
 	box-sizing: border-box
 	background-color: #fff
 	border-top: 5px solid $accent
-	overflow: hidden	
+	overflow: hidden
 	box-shadow: 0 0 1px rgba(122,122,122,.1)
 	border-radius: 3px
 	padding: 10px 15px 20px 15px
 	margin-bottom: 20px
 
-	h3 
+	h3
 		text-align: center
 		font-size: 1.05em
-	p 
+	p
 		font-size: .9em
 		line-height: 1.3
 		text-align: center
 	&:last-child
 		margin-bottom: 0
-		
+
 .partner-offer-img
 	width: 80px
 	height: 80px
 	margin: 15px auto
-	svg 
+	svg
 		width: 100%
 		height: 100%
 .partner-offer-btn
 	transition: background .25s ease
-	text-transform: uppercase	
+	text-transform: uppercase
 	display: block
 	width: 190px
 	letter-spacing: 1px
@@ -205,9 +204,9 @@
 	display: flex
 	flex-direction: row
 	justify-content: flex-start
-	flex-wrap: wrap	
+	flex-wrap: wrap
 	background-color: darken($body, 3%)
-	border-radius: 5px	
+	border-radius: 5px
 .partner-one-item
 	font-size: .95em
 	color: #000
@@ -222,20 +221,19 @@
 	box-shadow: 0 0 1px rgba(122,122,122,.1)
 	border-top: 5px solid #ab8e58
 	padding: 25px 15px
-	transition: .25s ease	
+	transition: .25s ease
 .partner-one-txt
 	padding-bottom: 20px
 	border-bottom: 1px solid #e6e6e6
 	margin-bottom: 20px
-	p 
+	p
 		margin-bottom: 7px
 		line-height: 1.3
-		font-weight: 600
 		span
-			font-weight: normal 
+			font-weight: normal
 			font-style: italic
 			margin-left: 7px
-	h2 
+	h2
 		margin-bottom: 20px
 		color: $darck
 	.partner-one-extra-txt
@@ -243,14 +241,6 @@
 .partner-one-extra-title
 	margi: 20px 0
 	color: $darck
-
-.partner-one-btn
-	
-
-
-
-
-
 
 	// ≥1200px
 +media-breakpoint-down(lg)
@@ -323,7 +313,7 @@
 		margin-bottom: 15px
 		margin-left: 0
 		padding: 0
-		order: 3		
+		order: 3
 	.partner-offer-list
 		width: 100%
 		display: flex
@@ -331,7 +321,7 @@
 		justify-content: flex-start
 		flex-wrap: wrap
 		align-items: stretch
-		height: auto	
+		height: auto
 
 	.partner-offer-item
 		width: calc(50% - 20px)
