Посадка, правки - футер

--- a/app/sass/_footer.sass
+++ b/app/sass/_footer.sass
@@ -24,14 +24,14 @@ footer
 .foot_nav-list-catalog
 	width: 20%
 .foot_nav-list-dillir
-	width: 30%	
+	width: 30%
 .foot_nav-list
 	padding-left: 0
 	list-style: none
 
 .foot_nav-item
 	margin: 0 0 6px
-	a 
+	a
 		display: inline-block
 		padding: 0 0 0 17px
 		vertical-align: top
@@ -55,9 +55,9 @@ footer
 .foot_txt
 	width: 25%
 	padding: 0 15px
-	p 
-		margin-top: -5px	
-	
+	p
+		margin-top: -5px
+
 .foot_info
 	width: 25%
 	padding: 0 15px
@@ -90,9 +90,9 @@ footer
 		display: inline-block
 		transition: .25s ease
 		cursor: pointer
-	
-	span:hover svg
-		transition: .25s ease
+
+	span:hover img
+		transition: all .3s ease
 		filter: invert(100%)
 
 #upbutton
@@ -106,7 +106,7 @@ footer
 	cursor: pointer
 	bottom: 30px
 	right: 30px
-	cursor: pointer  
+	cursor: pointer
 	position: fixed
 	z-index: 999
 
@@ -122,7 +122,7 @@ footer
 	.foot_nav-list-dillir
 		width: 33%
 	.foot_txt
-		display: none	
+		display: none
 	.foot_info
 		width: 33%
 // ≥768px
