--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -201,6 +201,12 @@ b, strong
 	transition: .3s
 	&:hover
 		background-color: $darck
+.youtube
+	width: 60%
+	margin-bottom: 20px
+	border: 5px solid darken($body, 5%)
+	border-radius: 2px
+
 	// ≥1200px
 +media-breakpoint-down(lg)
 	.naw-wrap
@@ -217,6 +223,8 @@ b, strong
 		order: 4
 		i
 			margin-right: 10px
+	.youtube
+		width: 80%
 
 @media only screen and (max-width : 920px)
 	.naw-btn
@@ -248,6 +256,8 @@ b, strong
 		order: 2
 		margin: auto 0
 		padding: 0
+	.youtube
+		width: 100%
 @media only screen and (max-width : 545px)
 	.naw-logo
 		order: 1
@@ -260,7 +270,8 @@ b, strong
 		order: 3
 		i
 			display: none
-
+	.youtube
+		width: 100%
 @import "_nawbtn"
 @import "_breadcrumb"
 @import "_mainproducts"
@@ -274,5 +285,6 @@ b, strong
 @import "_goods"
 @import "_partner"
 @import "_article"
+@import "_modal"
 
 @import "media" // Always at the end
