--- a/app/sass/_catalog.sass
+++ b/app/sass/_catalog.sass
@@ -50,15 +50,17 @@
 	display: flex
 	flex-direction: row
 	justify-content: flex-start
+	align-items: flex-start
 	flex-wrap: wrap
 .catalog-item-wrap
-	width: 117px
+	width: calc(20% - 20px)
+	margin: 10px 10px 0 0
 	height: auto
-	margin-right: 5px
 	transition: color .25s ease
 	corsor: pointer
 	&:hover
 		.catalog-item-img
+			opacity: .9
 		.catalog-item-title a
 			color: $accent
 			text-decoration: none
@@ -68,14 +70,14 @@
 	display: block
 	vertical-align: middle
 	text-align: center
-	width: 100px
-	height: 100px
-	margin: 0 auto 5px auto
+	width: 100%
+	height: 100%
+	margin: 0 auto 10px auto
 	img
 		width: auto
-		max-width: 100px
+		max-width: 150px
 		height: auto
-		max-height: 100px
+		max-height: 150px
 
 .catalog-item-title
 	color: #000
@@ -85,10 +87,32 @@
 	font-weight: normal
 	text-align: center
 	display: block
-	max-width: 117px
+	max-width: 125px
 	overflow: hidden
-	font-size: 0.8rem
-	line-height: normal
+	font-size: 0.9rem
+	line-height: 1.25
 	a
 		color: #000
 		transition: color .25s ease
+// ≥1200px
++media-breakpoint-down(lg)
+// ≥992px
++media-breakpoint-down(md)
+	.catalog-item-wrap
+		width: calc(25% - 20px)
+	.catalog-item-title
+		max-width: 100%
+		font-size: 1rem
+// ≥768px
++media-breakpoint-down(sm)
+	.catalog-item-wrap
+		width: calc(33.3333% - 15px)
+@media only screen and (max-width : 500px)
+		.catalog-list-items
+			justify-content: space-between
+			margin: 10px 0 0 0
+		.catalog-item-wrap
+			width: calc(50% - 15px)
+@media only screen and (max-width : 365px)
+		.catalog-item-wrap
+			width: calc(100% - 20px)
