--- a/app/sass/_mainproducts.sass
+++ b/app/sass/_mainproducts.sass
@@ -28,19 +28,19 @@
 	vertical-align: middle
 	text-align: center
 	margin: 0
-	padding-top: 10px
+	padding-top: 20px
 	padding-bottom: 10px
 
 	img
 		width: auto
-		max-width: 220px
+		max-width: 180px
 		height: auto
-		max-height: 220px
+		max-height: 180px
 .mainproducts_title
 	transition: color .25s ease
 	border-bottom: 1px solid #e6e6e6
 	margin-bottom: 12px
-	height: 70px
+	height: 60px
 	a
 		width: 100%
 		display: block
@@ -53,7 +53,7 @@
 		transition: color 0.25s ease 0s
 		&:hover
 			text-decoration: none
-			color: #353535
+			color: $darck
 .mainproducts_btn
 	transition: background .25s ease
 	text-transform: uppercase
@@ -76,7 +76,7 @@
 	&:hover
 		text-decoration: none
 		color: #fff
-		background-color: #353535
+		background-color: $darck
 
 // ≥1200px
 +media-breakpoint-down(lg)
